# beatroot-work

./: .gitignore  AGENTS.md
.project/: check1.txt  check2.txt
docs/: README.md  hardware-log.md
docs/reference/: README.md
docs/wiki/: llm-context.md
docs/wiki/hardware/: parts.md  yd-esp32-23.md
docs/wiki/projects/: index.md
docs/wiki/tools/: development.md  measurement.md
docs/wiki/workflows/: hardware-checks.md  rust-esp32.md
examples/one-led/: Cargo.toml  README.md
homeworks/2026-04-27/: Cargo.toml  README.md
homeworks/2026-04-27/.cargo/: config.toml
homeworks/2026-04-29/: .gitignore  Cargo.toml  README.md  build.rs
homeworks/2026-05-01/: Cargo.toml  README.md  build.rs
homeworks/2026-05-04/: Cargo.toml  README.md  build.rs
homeworks/2026-05-04/.cargo/: config.toml
lessons/2026-05-01/: arduino-button-delay.md
